Changed ui to address concerns brought up by Iris and Chia-Hui. The tabs at the top now maximize and minimize the window as step towards separate windows/routes for each of the different objects in the system. I also took out minimize/maximize controls on each of the windows. The sideboard never shows up in the dashboard as a small window. Right now you can't split the individual windows. This will need to be figured out.

--- a/website/app/application/core/projects/project/home/directives/home-files.html
+++ b/website/app/application/core/projects/project/home/directives/home-files.html
@@ -4,7 +4,7 @@
         <span>
             Files ({{matchingFiles.length | number}})
         </span>
-        <span class="pull-right bar-control">
+        <span ng-if="false" class="pull-right bar-control">
             <a ng-click="splitScreen('files', 'column1')">
                 <i class="fa fa-fw"
                    ng-class="{'fa-columns': !isSplitExpanded(), 'fa-close mc-danger': isSplitExpanded()}"></i>
