--- a/website/app/application/core/projects/project/home/directives/home-notes.html
+++ b/website/app/application/core/projects/project/home/directives/home-notes.html
@@ -5,7 +5,7 @@
                 Notes
             ({{notes.length}})
         </span>
-        <span class="pull-right bar-control">
+        <span ng-if="false" class="pull-right bar-control">
             <a ng-click="splitScreen('notes', 'column2')">
                 <i class="fa fa-fw"
                    ng-class="{'fa-columns': !isSplitExpanded(), 'fa-close mc-danger': isSplitExpanded()}"></i>
@@ -21,7 +21,7 @@
         <input type="text" ng-model="search" class="pull-right col-xs-4"
                placeholder="Search notes...">
         <span class="add-item pull-right">
-            <a  ng-click="createNote()" tooltip="Add Note">
+            <a  ng-click="createNote()" title="Add Note">
                 <i class="fa fa-fw fa-plus"></i>
             </a>
         </span>
