--- a/website/app/application/core/projects/project/home/directives/home-processes.html
+++ b/website/app/application/core/projects/project/home/directives/home-processes.html
@@ -2,10 +2,10 @@
     <div class="panel-heading processes-color home-panel-heading">
         <i class="fa fa-fw fa-code-fork bold"></i>
         <span>
-                Processes
+            Processes
             ({{procs.length}})
         </span>
-        <span class="pull-right bar-control">
+        <span ng-if="false" class="pull-right bar-control">
             <a ng-click="splitScreen('processes', 'column2')">
                 <i class="fa fa-fw"
                    ng-class="{'fa-columns': !isSplitExpanded(), 'fa-close mc-danger': isSplitExpanded()}"></i>
@@ -20,6 +20,10 @@
         </span>
         <input type="text" ng-model="search.name" class="pull-right col-xs-4"
                placeholder="Search processes...">
+        <span class="add-item pull-right">
+            <a ng-click="createProcess()" title="Add Process">
+                <i class="fa fa-fw fa-plus"></i>
+            </a>
     </div>
     <div class="panel-body home-panel-body"
          ng-class="{'no-max-height': isExpanded()}">
