--- a/website/app/application/core/projects/project/project-task-bar.html
+++ b/website/app/application/core/projects/project/project-task-bar.html
@@ -41,9 +41,6 @@
         <div class="col-xs-12">
             <div class="col-xs-2">
                 <a ng-click="openProvWizard()" title="Provenance Wizard">
-                    <i class="fa fa-fw fa-2x fa-magic task-bar-tool"
-                       ng-class="{'tool-inactive': !showPanel('provwizard'), 'tool-active': showPanel('provwizard')}">
-                    </i>
                 </a>
                 <a ng-click="openDrafts()" title="Drafts">
                     <i class="fa fa-fw fa-2x fa-pencil-square-o task-bar-tool"
@@ -61,24 +58,18 @@
             </div>
 
             <div class="col-xs-10">
-                <a class="btn btn-default btn-sideboard minimized-window"
-                   ng-click="openPanel('sideboard')">
+                <a class="btn btn-default btn-processes minimized-window"
+                   ng-class="{'btn-processes-active': isActive('processes')}"
+                   ng-click="toggleExpanded('processes')">
                     <span>
-                        <i class="fa fa-fw fa-clipboard bold"></i>
-                        Sideboard ({{list.sideboard.length}})
-                    </span>
-                </a>
-
-                <a class="btn btn-default btn-reviews minimized-window"
-                   ng-click="openPanel('reviews')">
-                    <span>
-                        <i class="fa fa-fw fa-comment bold"></i>
-                        Reviews ({{(project.reviews | byKey: 'status': 'open').length}})
+                        <i class="fa fa-fw fa-code-fork bold"></i>
+                        Processes
                     </span>
                 </a>
 
                 <a class="btn btn-default btn-files minimized-window"
-                   ng-click="openPanel('files')">
+                   ng-class="{'btn-files-active': isActive('files')}"
+                   ng-click="toggleExpanded('files')">
                     <span>
                         <i class="fa fa-fw fa-files-o bold"></i>
                         Files
@@ -86,26 +77,39 @@
                 </a>
 
                 <a class="btn btn-default btn-samples minimized-window"
-                   ng-click="openPanel('samples')">
+                   ng-class="{'btn-samples-active': isActive('samples')}"
+                   ng-click="toggleExpanded('samples')">
                     <span>
                         <i class="fa fa-fw fa-cubes bold"></i>
                         Samples ({{project.samples.length}})
                     </span>
                 </a>
 
+                <a class="btn btn-default btn-reviews minimized-window"
+                   ng-class="{'btn-reviews-active': isActive('reviews')}"
+                   ng-click="toggleExpanded('reviews')">
+                    <span>
+                        <i class="fa fa-fw fa-comment bold"></i>
+                        Reviews ({{(project.reviews | byKey: 'status': 'open').length}})
+                    </span>
+                </a>
+
                 <a class="btn btn-default btn-notes minimized-window"
-                   ng-click="openPanel('notes')">
+                   ng-class="{'btn-notes-active': isActive('notes')}"
+                   ng-click="toggleExpanded('notes')">
                     <span>
                         <i class="fa fa-fw fa-edit bold"></i>
                         Notes ({{project.notes.length}})
                     </span>
                 </a>
 
-                <a class="btn btn-default btn-processes minimized-window"
-                   ng-click="openPanel('processes')">
+
+                <a class="btn btn-default btn-sideboard minimized-window"
+                   ng-class="{'btn-sideboard-active': isActive('sideboard')}"
+                   ng-click="toggleExpanded('sideboard')">
                     <span>
-                        <i class="fa fa-fw fa-code-fork bold"></i>
-                        Processes
+                        <i class="fa fa-fw fa-clipboard bold"></i>
+                        Sideboard ({{list.sideboard.length}})
                     </span>
                 </a>
             </div>
